Publication changes made to JSON

--- a/template/publication.html
+++ b/template/publication.html
@@ -1,34 +1,7 @@
+<!-- Optional JavaScript -->
+<script src="js/publication.js"></script>
 
-<br>
-<h5 align="center">Conference</h5>
-<div class="mx-4">
-  <div id="publicationCard" class="row row-cols-1 row-cols-md-3">
+<div id="base">
+  
     
-    <div class="col mb-4">
-      <div class="card h-100">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a short card.</p>
-        </div>
-      </div>
-    </div>
-    <div class="col mb-4">
-      <div class="card h-100">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-        </div>
-      </div>
-    </div>
-    <div class="col mb-4">
-      <div class="card h-100">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- Optional JavaScript -->
-    <script src="js/publication.js"></script>
 </div>
