--- a/template/qualification.html
+++ b/template/qualification.html
@@ -18,7 +18,7 @@
     </thead>
     <tbody class="text-center">
       <tr>
-        <th scope="row">(Ph.D)</th>
+        <th scope="row">Ph.D</th>
         <td>Ph.D</td>
         <td>WELDING OF COMPOSITE</td>
         <td>2020</td>
