--- a/template/home.html
+++ b/template/home.html
@@ -3,22 +3,22 @@
     <div class="carousel-item active">
       <img src="img/slide-3.jpg" class="slider-img d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5 class="font-weight-bold">Third slide label</h5>
-        <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+        <h5 class="font-weight-bold slide-text">Ph.D Scholar</h5>
+        <p class="slide-text">Completed in Thiagarajar college of Engg</p>
       </div>
     </div>
     <div class="carousel-item">
       <img src="img/slide-2.jpg" class="slider-img d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+        <h5 class="font-weight-bold slide-text">Ph.D Scholar</h5>
+        <p class="slide-text">Completed in Thiagarajar college of Engg</p>
       </div>
     </div>
     <div class="carousel-item">
       <img src="img/slide-5.jpg" class="slider-img d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+        <h5 class="font-weight-bold slide-text">Ph.D Scholar</h5>
+        <p class="slide-text">Completed in Thiagarajar college of Engg</p>
       </div>
     </div>
   </div>
@@ -55,4 +55,106 @@
     </div>
   </div>
 </div>
+</div>
+
+
+<div class="container mt-5 mb-5">
+    <h3 class="text-center my-4"><strong> Timeline </strong></h3>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="main-timeline7">
+              <div class="timeline">
+                    <div class="timeline-icon"><i class="fa fa-rocket"></i></div>
+                    <span class="year">2020</span>
+                    <div class="timeline-content">
+                        <h5 class="title">Ph.D Completion</h5>
+                        <p class="description">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3930.612227095779!2d78.08036161400551!3d9.882863377753688!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b00c58f98cfb84d%3A0x29f51efea3e84bf2!2sThiagarajar%20College%20of%20Engineering!5e0!3m2!1sen!2sin!4v1609377919272!5m2!1sen!2sin" width="100%" height="" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                        </p>
+                    </div>
+                </div>
+                <div class="timeline">
+                    <div class="timeline-icon"><i class="fa fa-briefcase"></i></div>
+                    <span class="year">2015 - till date</span>
+                    <div class="timeline-content">
+                        <h5 class="title">Assistant Professor</h5>
+                        <p class="description">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3931.1485872071576!2d78.16236021400523!3d9.837885278505743!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b00fab2102cf835%3A0x64e0dd01744bf1f5!2sK.L.N.%20College%20of%20Engineering!5e0!3m2!1sen!2sin!4v1609376632443!5m2!1sen!2sin" width="100%" height="" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                        </p>
+                    </div>
+                </div>
+                <div class="timeline">
+                    <div class="timeline-icon"><i class="fa fa-briefcase"></i></div>
+                    <span class="year">2012</span>
+                    <div class="timeline-content">
+                        <h5 class="title">Assistant Professor</h5>
+                        <p class="description">
+                          Worked as Assistant professor in Machanical department from 2012 to 2015
+                          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3928.3234359646776!2d78.23814931400678!3d10.072562274546254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b00bf0cc0033ff5%3A0xd2aaca8cf7b2b1cd!2zTGF0aGEgTWF0aGF2YW4gRW5naW5lZXJpbmcgQ29sbGVnZSDgrrLgrqTgrr4g4K6u4K6-4K6k4K614K6p4K-NIOCuquCviuCuseCuv-Cur-Cuv-Cur-CusuCvjSDgrpXgrrLgr43grrLgr4LgrrDgrr8!5e0!3m2!1sen!2sin!4v1609377098483!5m2!1sen!2sin" width="100%" height="" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                        </p>
+                    </div>
+                </div>
+                <div class="timeline">
+                    <div class="timeline-icon"><i class="fa fa-certificate"></i></div>
+                    <span class="year">2012</span>
+                    <div class="timeline-content">
+                        <h5 class="title">ME - Machanical Engg </h5>
+                        <p class="description">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3944.0484760768773!2d77.72352431399808!3d8.68694029664617!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b04126b9cf8ff7d%3A0xe818c690ce42ee03!2sAnna%20University%20Regional%20Campus!5e0!3m2!1sen!2sin!4v1609377872113!5m2!1sen!2sin" width="100%" height="" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                        </p>
+                    </div>
+                </div>
+                <div class="timeline">
+                    <div class="timeline-icon"><i class="fa fa-graduation-cap"></i></div>
+                    <span class="year">2010</span>
+                    <div class="timeline-content">
+                        <h5 class="title">BE - Machanical Engg </h5>
+                        <p class="description">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3930.1276118557334!2d78.12178491400581!3d9.923328677074302!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b00bf7661121ef3%3A0xed65863c580e8f20!2sSACS%20MAVMM%20Engg%20College%20Madurai%20City%20Office!5e0!3m2!1sen!2sin!4v1609378222571!5m2!1sen!2sin" width="100%" height="" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                        </p>
+                    </div>
+                </div>
+                <div class="timeline">
+                    <div class="timeline-icon"><i class="fa fa-graduation-cap"></i></div>
+                    <span class="year">2007</span>
+                    <div class="timeline-content">
+                        <h5 class="title">Diplomo - Machanical Engg</h5>
+                        <p class="description">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3928.4395245274045!2d78.20785761400678!3d10.06302587470883!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b00bf4ee6557425%3A0xa7404d95eb7dd0eb!2sGMS%20MAVMM%20POLYTECHNIC%20COLLEGE!5e0!3m2!1sen!2sin!4v1609377752775!5m2!1sen!2sin" width="100%" height="" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                        </p>
+                    </div>
+                </div>
+                <div class="timeline">
+                    <div class="timeline-icon"><i class="fa fa-book"></i></div>
+                    <span class="year">2004</span>
+                    <div class="timeline-content">
+                        <h5 class="title">Schooling - Completion</h5>
+                        <p class="description">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3931.5806415827396!2d77.92443356479261!3d9.801505442987382!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b072ccc988edfff%3A0xbe24a4160c438ff!2sGovernment%20Higher%20Secondary%20School!5e0!3m2!1sen!2sin!4v1609375364683!5m2!1sen!2sin" width="100%" height="10%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                        </p>
+                    </div>
+                </div>
+                <div class="timeline">
+                    <div class="timeline-icon"><i class="fa fa-star"></i></div>
+                    <span class="year">1993</span>
+                    <div class="timeline-content">
+                        <h5 class="title">Schooling - Started</h5>
+                        <p class="description">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3931.5806415827396!2d77.92443356479261!3d9.801505442987382!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b072ccc988edfff%3A0xbe24a4160c438ff!2sGovernment%20Higher%20Secondary%20School!5e0!3m2!1sen!2sin!4v1609375364683!5m2!1sen!2sin" width="100%" height="10%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                        </p>
+                    </div>
+                </div>
+                <div class="timeline">
+                    <div class="timeline-icon"><i class="fa fa-child"></i></div>
+                    <span class="year">1987</span>
+                    <div class="timeline-content">
+                        <h5 class="title">Born on 20 April, 1987</h5>
+                        <p class="description">
+                            <iframe width="100%" height="5%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d62882.11670273277!2d78.12450883633896!3d9.922938506911494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1408931321176"></iframe>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
